{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 97,
  "lineage": "3ee6865d-685a-b64b-4256-cd37bcdcf70c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Public-Interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f948172f968c2f24",
            "associate_with_private_ip": "10.0.1.63",
            "association_id": "eipassoc-047ea7912ca106c8e",
            "domain": "vpc",
            "id": "eipalloc-0f948172f968c2f24",
            "instance": "i-0cf77e58fc6706af1",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0c9017c37fba14863",
            "private_dns": "ip-10-0-1-63.us-west-1.compute.internal",
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-54-219-19-202.us-west-1.compute.amazonaws.com",
            "public_ip": "54.219.19.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_network_interface.webserver-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc5e9ff792ec08e3",
            "arn": "arn:aws:ec2:us-west-1:181066809772:instance/i-0cf77e58fc6706af1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf77e58fc6706af1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c9017c37fba14863"
              }
            ],
            "primary_network_interface_id": "eni-0c9017c37fba14863",
            "private_dns": "ip-10-0-1-63.us-west-1.compute.internal",
            "private_ip": "10.0.1.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9c52eebaa73f18b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e257ff195ca096a",
            "tags": {
              "Name": "WebServer-Terr"
            },
            "tags_all": {
              "Name": "WebServer-Terr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d94511deb377e0bc"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver-nic",
            "aws_security_group.security_group_prod",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terr_InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:internet-gateway/igw-06f719d1bfcc3aed5",
            "id": "igw-06f719d1bfcc3aed5",
            "owner_id": "181066809772",
            "vpc_id": "vpc-04dc6367723ec28d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:network-interface/eni-0c9017c37fba14863",
            "attachment": [
              {
                "attachment_id": "eni-attach-03276c88f0bae7d93",
                "device_index": 0,
                "instance": "i-0cf77e58fc6706af1"
              }
            ],
            "id": "eni-0c9017c37fba14863",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:94:ce:61:d7:09",
            "owner_id": "181066809772",
            "private_ip": "10.0.1.63",
            "private_ip_list": [
              "10.0.1.63"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.63"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d94511deb377e0bc"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e257ff195ca096a"
          },
          "dependencies": [
            "aws_security_group.security_group_prod",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terr_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:route-table/rtb-01543bff576495076",
            "id": "rtb-01543bff576495076",
            "owner_id": "181066809772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06f719d1bfcc3aed5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc6367723ec28d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-1-Terr_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bc691488bef3d38",
            "route_table_id": "rtb-01543bff576495076",
            "subnet_id": "subnet-05e257ff195ca096a"
          },
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_route_table.Terr_Route_table",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:security-group/sg-0d94511deb377e0bc",
            "description": "allows web traffic to webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d94511deb377e0bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow web traffic",
            "name_prefix": "",
            "owner_id": "181066809772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Web and SSH"
            },
            "tags_all": {
              "Name": "Allow Web and SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc6367723ec28d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:subnet/subnet-05e257ff195ca096a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e257ff195ca096a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181066809772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Subnet"
            },
            "tags_all": {
              "Name": "Prod-Subnet"
            },
            "vpc_id": "vpc-04dc6367723ec28d2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:181066809772:vpc/vpc-04dc6367723ec28d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09571f3a0e9769829",
            "default_route_table_id": "rtb-01b833135dbcaeea5",
            "default_security_group_id": "sg-0f838907bd70bdfe1",
            "dhcp_options_id": "dopt-0d7d47b36c990098f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04dc6367723ec28d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b833135dbcaeea5",
            "owner_id": "181066809772"
          }
        }
      ]
    }
  ]
}